--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,12 @@
 
   <dependencies>
 
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>26.0-jre</version>
+    </dependency>
+
     <!--DISCORD API-->
     <dependency>
       <groupId>net.dv8tion</groupId>
