--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,14 @@
             <goals>
               <goal>shade</goal>
             </goals>
+            <configuration>
+              <transformers>
+                <!-- add Main-Class to manifest file -->
+                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                  <mainClass>org.togetherjava.ApplicationEntry</mainClass>
+                </transformer>
+              </transformers>
+            </configuration>
           </execution>
         </executions>
 
