--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.0</version>
         <configuration>
-          <release>10</release>
+          <release>11</release>
 
           <!--Compile parameter names for jdbi-->
           <compilerArgs>
@@ -37,7 +37,7 @@
         </configuration>
       </plugin>
 
-      <!--PACKAGE DEPEENDENCIES-->
+      <!--PACKAGE DEPENDENCIES-->
       <plugin>
         <artifactId>maven-shade-plugin</artifactId>
         <version>3.2.0</version>
@@ -201,6 +201,19 @@
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
       <version>1.7.25</version>
+    </dependency>
+
+    <!--JAVADOC PARSER-->
+    <dependency>
+      <groupId>de.ialistannen</groupId>
+      <artifactId>HtmlJavadocParser</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.overzealous</groupId>
+      <artifactId>remark</artifactId>
+      <version>1.1.0</version>
     </dependency>
 
   </dependencies>
