--- a/src/main/resources/config.toml
+++ b/src/main/resources/config.toml
@@ -13,6 +13,10 @@
 [database]
   connection-url = "jdbc:sqlite:db.sqlite"
 
+[javadoc]
+  base-url = "https://docs.oracle.com/en/java/javase/11/docs/api"
+  all-classes-appendix = "/allclasses.html"
+
 [messages]
   [messages.error]
     self-destruct = true
