--- a/src/main/resources/config.toml
+++ b/src/main/resources/config.toml
@@ -13,8 +13,14 @@
 [database]
   connection-url = "jdbc:sqlite:db.sqlite"
 
-[javadoc]
+# JDK
+[[javadoc]]
   base-url = "https://docs.oracle.com/en/java/javase/11/docs/api"
+  all-classes-appendix = "/allclasses.html"
+
+# JavaFx
+[[javadoc]]
+  base-url = "https://openjfx.io/javadoc/12/"
   all-classes-appendix = "/allclasses.html"
 
 [messages]
