--- a/pom.xml
+++ b/pom.xml
@@ -189,6 +189,11 @@
       <artifactId>sqlite-jdbc</artifactId>
       <version>3.25.2</version>
     </dependency>
+    <dependency>
+      <groupId>org.flywaydb</groupId>
+      <artifactId>flyway-core</artifactId>
+      <version>5.2.4</version>
+    </dependency>
 
 
     <!--LOGGING-->
