--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <db.jdbc.url>jdbc:sqlite:db.sqlite</db.jdbc.url>
   </properties>
 
   <build>
@@ -89,6 +90,82 @@
           <abbrevLength>12</abbrevLength>
           <commitIdGenerationMode>flat</commitIdGenerationMode>
           <dateFormat>yyyy-MM-dd @ HH:mm:ss z</dateFormat>
+        </configuration>
+      </plugin>
+
+      <!--DATABASE MIGRATION-->
+      <plugin>
+        <groupId>org.flywaydb</groupId>
+        <artifactId>flyway-maven-plugin</artifactId>
+        <version>5.2.4</version>
+
+        <!-- Note that we're executing the Flyway plugin in the "generate-sources" phase -->
+        <executions>
+          <execution>
+            <phase>generate-sources</phase>
+            <goals>
+              <goal>migrate</goal>
+            </goals>
+          </execution>
+        </executions>
+
+        <!-- Note that we need to prefix the db/migration path with filesystem: to prevent Flyway
+             from looking for our migration scripts only on the classpath -->
+        <configuration>
+          <url>${db.jdbc.url}</url>
+          <locations>
+            <location>filesystem:src/main/resources/db</location>
+          </locations>
+        </configuration>
+      </plugin>
+
+      <!-- JOOQ-->
+      <plugin>
+        <groupId>org.jooq</groupId>
+        <artifactId>jooq-codegen-maven</artifactId>
+        <version>3.11.11</version>
+
+        <!-- The plugin should hook into the generate goal -->
+        <executions>
+          <execution>
+            <phase>generate-sources</phase>
+            <goals>
+              <goal>generate</goal>
+            </goals>
+          </execution>
+        </executions>
+
+        <dependencies>
+          <!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
+          <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.28.0</version>
+          </dependency>
+        </dependencies>
+
+        <configuration>
+
+          <!-- JDBC connection parameters -->
+          <jdbc>
+            <driver>org.sqlite.JDBC</driver>
+            <url>${db.jdbc.url}</url>
+          </jdbc>
+
+          <!-- Generator parameters -->
+          <generator>
+            <database>
+              <name>org.jooq.meta.sqlite.SQLiteDatabase</name>
+              <includes>.*</includes>
+            </database>
+            <generate>
+              <daos>true</daos>
+            </generate>
+            <target>
+              <packageName>de.ialistannen.db.autogen</packageName>
+              <directory>target/generated-sources/jooq</directory>
+            </target>
+          </generator>
         </configuration>
       </plugin>
 
@@ -174,25 +251,41 @@
     </dependency>
 
     <!--DATABASE-->
-    <dependency>
-      <groupId>org.jdbi</groupId>
-      <artifactId>jdbi3-core</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.jdbi</groupId>
-      <artifactId>jdbi3-sqlobject</artifactId>
-    </dependency>
-
     <!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
     <dependency>
       <groupId>org.xerial</groupId>
       <artifactId>sqlite-jdbc</artifactId>
-      <version>3.25.2</version>
+      <version>3.28.0</version>
     </dependency>
+    <!--MIGRATION-->
     <dependency>
       <groupId>org.flywaydb</groupId>
       <artifactId>flyway-core</artifactId>
       <version>5.2.4</version>
+    </dependency>
+
+    <!--JOOQ-->
+    <dependency>
+      <groupId>org.jooq</groupId>
+      <artifactId>jooq</artifactId>
+      <version>3.11.11</version>
+    </dependency>
+    <dependency>
+      <groupId>org.jooq</groupId>
+      <artifactId>jooq-meta</artifactId>
+      <version>3.11.11</version>
+    </dependency>
+    <dependency>
+      <groupId>org.jooq</groupId>
+      <artifactId>jooq-codegen</artifactId>
+      <version>3.11.11</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/javax.annotation/javax.annotation-api -->
+    <!-- Needed to compile JOOQs classes -->
+    <dependency>
+      <groupId>javax.annotation</groupId>
+      <artifactId>javax.annotation-api</artifactId>
+      <version>1.3.2</version>
     </dependency>
 
 
