Remove default permissions group

--- a/src/main/resources/config.toml
+++ b/src/main/resources/config.toml
@@ -42,4 +42,4 @@
 
 [permissions]
   # The admin, probably
-  id_328235363099213824 = ["tag.create", "tag.delete"]
+  # id_328235363099213824 = ["tag.create", "tag.delete"]
