--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
           <!--Compile parameter names for jdbi-->
           <compilerArgs>
             <arg>-parameters</arg>
+            <arg>-AtargetPackage=org.togetherjava.autodiscovery</arg>
           </compilerArgs>
 
           <annotationProcessorPaths>
@@ -33,6 +34,11 @@
               <groupId>org.immutables</groupId>
               <artifactId>value</artifactId>
               <version>2.7.1</version>
+            </dependency>
+            <dependency>
+              <groupId>de.ialistannen</groupId>
+              <artifactId>CommandProcrastinationProcessor</artifactId>
+              <version>1.0-SNAPSHOT</version>
             </dependency>
           </annotationProcessorPaths>
         </configuration>
@@ -217,7 +223,7 @@
     <dependency>
       <groupId>net.dv8tion</groupId>
       <artifactId>JDA</artifactId>
-      <version>3.8.1_439</version>
+      <version>4.0.0_46</version>
 
       <!--NO AUDIO-->
       <exclusions>
@@ -226,6 +232,12 @@
           <artifactId>opus-java</artifactId>
         </exclusion>
       </exclusions>
+    </dependency>
+
+    <dependency>
+      <groupId>de.ialistannen</groupId>
+      <artifactId>CommandProcrastination</artifactId>
+      <version>1.0-SNAPSHOT</version>
     </dependency>
 
     <!--COMMAND PARSER-->
@@ -307,6 +319,11 @@
       <artifactId>HtmlJavadocParser</artifactId>
       <version>5781b12257</version>
     </dependency>
+    <!--        <dependency>-->
+    <!--          <groupId>de.ialistannen</groupId>-->
+    <!--          <artifactId>HtmlJavadocParser</artifactId>-->
+    <!--          <version>1.0-SNAPSHOT</version>-->
+    <!--        </dependency>-->
 
     <!--JAVADOC HTML FORMATTER-->
     <dependency>
@@ -324,20 +341,5 @@
     </dependency>
 
   </dependencies>
-
-
-  <!--JDBI BOM-->
-  <dependencyManagement>
-    <dependencies>
-      <dependency>
-        <groupId>org.jdbi</groupId>
-        <artifactId>jdbi3-bom</artifactId>
-        <type>pom</type>
-        <version>3.3.0</version>
-        <scope>import</scope>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
-
 
 </project>
