--- a/pom.xml
+++ b/pom.xml
@@ -228,16 +228,16 @@
       </exclusions>
     </dependency>
 
-    <!--    <dependency>-->
-    <!--      <groupId>com.github.I-Al-Istannen</groupId>-->
-    <!--      <artifactId>CommandProcrastinationParent</artifactId>-->
-    <!--      <version>6be9302430</version>-->
-    <!--    </dependency>-->
     <dependency>
-      <groupId>de.ialistannen</groupId>
-      <artifactId>CommandProcrastination</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <groupId>com.github.I-Al-Istannen</groupId>
+      <artifactId>CommandProcrastinationParent</artifactId>
+      <version>490bd1113d</version>
     </dependency>
+    <!--    <dependency>-->
+    <!--      <groupId>de.ialistannen</groupId>-->
+    <!--      <artifactId>CommandProcrastination</artifactId>-->
+    <!--      <version>1.0-SNAPSHOT</version>-->
+    <!--    </dependency>-->
 
     <!--CONFIG LANGUAGE-->
     <dependency>
