--- a/pom.xml
+++ b/pom.xml
@@ -179,6 +179,7 @@
           <include>**/*.properties</include>
           <include>**/*.toml</include>
           <include>**/*.xml</include>
+          <include>**/*.yml</include>
           <include>db/**</include>
         </includes>
       </resource>
@@ -244,6 +245,13 @@
       <groupId>com.moandjiezana.toml</groupId>
       <artifactId>toml4j</artifactId>
       <version>0.7.2</version>
+    </dependency>
+
+    <!-- MESSAGES LANGUAGE -->
+    <dependency>
+      <groupId>org.yaml</groupId>
+      <artifactId>snakeyaml</artifactId>
+      <version>1.25</version>
     </dependency>
 
     <!--IMMUTABLE DATA CLASSES-->
