--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <db.jdbc.url>jdbc:sqlite:db.sqlite</db.jdbc.url>
+    <jooq.version>3.14.4</jooq.version>
   </properties>
 
   <build>
@@ -19,7 +20,7 @@
       <!--COMPILER-->
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.0</version>
+        <version>3.8.1</version>
         <configuration>
           <release>11</release>
 
@@ -32,7 +33,7 @@
             <dependency>
               <groupId>org.immutables</groupId>
               <artifactId>value</artifactId>
-              <version>2.7.1</version>
+              <version>2.8.8</version>
             </dependency>
           </annotationProcessorPaths>
         </configuration>
@@ -41,7 +42,7 @@
       <!--PACKAGE DEPENDENCIES-->
       <plugin>
         <artifactId>maven-shade-plugin</artifactId>
-        <version>3.2.0</version>
+        <version>3.2.4</version>
         <executions>
           <execution>
             <id>shade</id>
@@ -97,7 +98,7 @@
       <plugin>
         <groupId>org.flywaydb</groupId>
         <artifactId>flyway-maven-plugin</artifactId>
-        <version>5.2.4</version>
+        <version>6.5.5</version>
 
         <!-- Note that we're executing the Flyway plugin in the "generate-sources" phase -->
         <executions>
@@ -123,7 +124,7 @@
       <plugin>
         <groupId>org.jooq</groupId>
         <artifactId>jooq-codegen-maven</artifactId>
-        <version>3.11.11</version>
+        <version>${jooq.version}</version>
 
         <!-- The plugin should hook into the generate goal -->
         <executions>
@@ -140,7 +141,7 @@
           <dependency>
             <groupId>org.xerial</groupId>
             <artifactId>sqlite-jdbc</artifactId>
-            <version>3.28.0</version>
+            <version>3.32.3.2</version>
           </dependency>
         </dependencies>
 
@@ -211,14 +212,14 @@
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
-      <version>26.0-jre</version>
+      <version>30.0-jre</version>
     </dependency>
 
     <!--DISCORD API-->
     <dependency>
       <groupId>net.dv8tion</groupId>
       <artifactId>JDA</artifactId>
-      <version>4.0.0_46</version>
+      <version>4.2.0_222</version>
 
       <!--NO AUDIO-->
       <exclusions>
@@ -251,14 +252,14 @@
     <dependency>
       <groupId>org.yaml</groupId>
       <artifactId>snakeyaml</artifactId>
-      <version>1.25</version>
+      <version>1.27</version>
     </dependency>
 
     <!--IMMUTABLE DATA CLASSES-->
     <dependency>
       <groupId>org.immutables</groupId>
       <artifactId>value</artifactId>
-      <version>2.7.1</version>
+      <version>2.8.8</version>
       <scope>provided</scope>
     </dependency>
 
@@ -267,30 +268,30 @@
     <dependency>
       <groupId>org.xerial</groupId>
       <artifactId>sqlite-jdbc</artifactId>
-      <version>3.28.0</version>
+      <version>3.32.3.2</version>
     </dependency>
     <!--MIGRATION-->
     <dependency>
       <groupId>org.flywaydb</groupId>
       <artifactId>flyway-core</artifactId>
-      <version>5.2.4</version>
+      <version>7.3.0</version>
     </dependency>
 
     <!--JOOQ-->
     <dependency>
       <groupId>org.jooq</groupId>
       <artifactId>jooq</artifactId>
-      <version>3.11.11</version>
+      <version>${jooq.version}</version>
     </dependency>
     <dependency>
       <groupId>org.jooq</groupId>
       <artifactId>jooq-meta</artifactId>
-      <version>3.11.11</version>
+      <version>${jooq.version}</version>
     </dependency>
     <dependency>
       <groupId>org.jooq</groupId>
       <artifactId>jooq-codegen</artifactId>
-      <version>3.11.11</version>
+      <version>${jooq.version}</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/javax.annotation/javax.annotation-api -->
     <!-- Needed to compile JOOQs classes -->
@@ -319,11 +320,6 @@
       <artifactId>HtmlJavadocParser</artifactId>
       <version>5781b12257</version>
     </dependency>
-    <!--        <dependency>-->
-    <!--          <groupId>de.ialistannen</groupId>-->
-    <!--          <artifactId>HtmlJavadocParser</artifactId>-->
-    <!--          <version>1.0-SNAPSHOT</version>-->
-    <!--        </dependency>-->
 
     <!--JAVADOC HTML FORMATTER-->
     <dependency>
@@ -337,7 +333,7 @@
     <dependency>
       <groupId>com.github.ben-manes.caffeine</groupId>
       <artifactId>caffeine</artifactId>
-      <version>2.7.0</version>
+      <version>2.8.6</version>
     </dependency>
 
   </dependencies>
